[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities"
version = "0.1.0"
description = "A collection of finished, standalone Python utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

# Each finished tool folder that is a Python package (has __init__.py) becomes an
# importable top-level package. Adding a new tool later requires no changes here.
[tool.setuptools.packages.find]
where = ["."]
